[project]
name = "self-censor-app"
version = "0.1.0"
description = "Self Censor Application"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "openai",
    "streamlit",
    "pymongo",
    "filelock",
    "python-dotenv>=1.1.1",
    "litellm>=1.74.8",
]

[tool.uv]
dev-dependencies = [] 
