[project]
name = "qualtrics-streamlit-chat-app"
version = "0.1.0"
description = "Qualtrics Streamlit Chat Application"
readme = "README.md"
requires-python = ">=3.11.3"
dependencies = [
    "openai",
    "streamlit",
    "pymongo",
    "filelock",
    "python-dotenv>=1.1.1",
    "litellm>=1.74.8",
    "selenium>=4.34.2",
    "aiohttp>=3.12.14",
]

[tool.uv]
dev-dependencies = [] 
